# contract-interface

./: Cargo.toml  README.md
contract-interface-internal/: Cargo.toml
contract-interface-internal/examples/: call_in_01.rs  call_in_02.rs  call_out_01.rs  call_out_02.rs
contract-interface-internal/src/: lib.rs
contract-interface-macros/: Cargo.toml  README.md
contract-interface-macros/src/: crate_name.rs  error.rs  get_ident.rs  lib.rs  replace_ident.rs  replace_type_ident.rs
contract-interface-macros/src/core_impl/: mod.rs
contract-interface-macros/src/core_impl/code_generator/: attr_sig_info.rs  attr_sig_info_called_in.rs  impl_item_method_info.rs  impl_item_method_info_called_in.rs  item_impl_info.rs  item_impl_info_called_in.rs  item_struct_info.rs  item_struct_info_called_in.rs  item_trait_info.rs  item_trait_info_called_in.rs  mod.rs  trait_item_method_info.rs  trait_item_method_info_called_in.rs
contract-interface-macros/src/core_impl/info_extractor/: arg_info.rs  arg_info_called_in.rs  attr_docs.rs  attr_sig_info.rs  attr_sig_info_called_in.rs  impl_item_method_info.rs  impl_item_method_info_called_in.rs  init_attr.rs  inputs.rs  item_generics.rs  item_impl_info.rs  item_impl_info_called_in.rs  item_trait_info.rs  item_trait_info_called_in.rs  meta_attrs.rs  mod.rs  trait_item_method_info.rs  trait_item_method_info_called_in.rs
contract-interface-macros/src/core_impl/metadata/: metadata_generator.rs  metadata_visitor.rs
contract-interface-types/: Cargo.toml  README.md
contract-interface-types/src/: byte_args.rs  interface.rs  lib.rs
contract-interface-types/src/byte_args/: borsh.rs  json.rs
contract-interface-types/src/optics/: lens.rs  mod.rs
contract-standards/: Cargo.toml  README.md
contract-standards/src/: lib.rs
contract-standards/src/fungible_token/: core.rs  core_impl.rs  macros.rs  metadata.rs  mod.rs  receiver.rs  resolver.rs  storage_impl.rs
contract-standards/src/pause/: core.rs  core_impl.rs  ft_impl.rs  macros.rs  mod.rs
contract-standards/src/storage_management/: mod.rs
examples/: call_in_02.rs  call_out_01.rs  call_out_02.rs
examples/dummy/example_01/: api_manual.rs
examples/dummy/example_02/: api.rs
examples/dummy/example_03/: api.rs  api_manual.rs  lib.rs
examples/dummy/example_04/: api.rs
examples/dummy/example_05/: api_manual.rs  lib.rs
examples/example_01/: api.rs  api_manual.rs  lib.rs
examples/example_02/: api_manual.rs  lib.rs
examples/example_03/: api.rs  client.rs  lib.rs
examples/example_04/: api_manual.rs  lib.rs
examples/example_05/: api.rs  lib.rs
examples/fungible-token/: Cargo.toml  README.md
examples/fungible-token/examples/: heavy.rs
examples/fungible-token/ft/: Cargo.toml
examples/fungible-token/ft/src/: api.rs  lib.rs  marshall.rs  metadata_provider.rs  resolver.rs  storage.rs
examples/fungible-token/res/: defi.wasm  fungible_token.wasm
examples/fungible-token/test-contract-defi/: Cargo.toml
examples/fungible-token/test-contract-defi/src/: api.rs  lib.rs  marshall.rs  receiver.rs  value_return.rs
examples/fungible-token/tests/sim/: no_macros.rs  utils.rs  with_macros.rs
src/: args.rs  call_in_01.rs  ex.rs  example.rs  example_call_in_01.rs  example_call_in_02.rs  example_call_out.rs  example_call_out_01.rs  example_call_out_02.rs  expanded_test.rs  interface.rs  lib.rs
src/args/: borsh.rs  json.rs
src/example_01/: api.rs  api_manual.rs  client.rs  mod.rs
src/example_02/: api.rs  mod.rs
src/example_03/: mod.rs
src/example_04/: mod.rs
src/example_05/: mod.rs
