[package]
name = "contract-interface"
version = "0.0.1"
authors = ["Thiago Machado <thiago@keyko.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"


[dependencies.contract-interface-macros]
version = "0.0.1"
path = "contract-interface-macros"

# [patch.crates-io]
# near-sdk = { path = "../../near-sdk-rs/near-sdk/" }
# near-contract-standards = { path = "../../near-sdk-rs/near-contract-standards/" }
