[package]
name = "contract-interface"
version = "0.0.1"
authors = ["Thiago Machado <thiago@keyko.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
contract-interface-types = {path = "contract-interface-types"}
contract-interface-macros = {path = "contract-interface-macros"}
near-sdk = "4.0.0-pre.2"

[dev-dependencies]
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"

[workspace]
members = [
    "contract-interface-types", 
    "contract-interface-macros", 
    "contract-standards"
]

[[example]]
name = "example_01"
path = "examples/example_01/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "example_02"
path = "examples/example_02/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "example_04"
path = "examples/example_04/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "example_05"
path = "examples/example_05/lib.rs"
crate-type = ["cdylib"]

