[package]
name = "contract-interface-internal"
version = "0.0.1"
authors = ["Thiago Machado <thiago@keyko.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"

[dependencies.contract-interface-types]
version = "0.0.1"
path = "../contract-interface-types"

[dependencies.contract-interface-macros]
version = "0.0.1"
path = "../contract-interface-macros"

[[example]]
name = "call_in_01"
crate-type = ["cdylib"]

[[example]]
name = "call_in_02"
crate-type = ["cdylib"]

[[example]]
name = "call_out_01"
crate-type = ["cdylib"]

[[example]]
name = "call_out_02"
crate-type = ["cdylib"]
