[package]
name = "contract-interface-macros"
version = "0.0.1"
authors = [
    "Near Inc <max@nearprotocol.com>", 
    "Thiago Machado <thiago@keyko.io>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "=1.0.57", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
Inflector = { version = "0.11.4", default-features = false, features = [] }
indexmap = {version = "1.7.0", features = ["std"]}
proc-macro-crate = "1.1.0"
darling = "0.13.0"

[dependencies.contract-interface-types]
version = "0.0.1"
path = "../contract-interface-types"