[package]
name = "contract-interface-types"
version = "0.0.1"
authors = ["Thiago Machado <thiago@keyko.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"