[package]
name = "defi"
version = "0.0.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.2"
contract-standards = {path = "../../../contract-standards"}
contract-interface = {path = "../../../"}

[features]
default = ["serve"]
serve = []
